--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Embedded Google Form</title>
+  <title>Playlist Submission / 歌单提交</title>
   <style>
     /* Center container and make iframe responsive */
     html, body {
       height: 100%;
       margin: 0;
       font-family: Arial, Helvetica, sans-serif;
-      background: #f5f5f5;
+      background: transparent;
     }
     .form-wrapper {
       display: flex;
@@ -23,7 +23,7 @@
     .form-container {
       width: 100%;
       max-width: 960px;
-      background: #fff;
+      background: transparent;
       box-shadow: 0 2px 6px rgba(0,0,0,0.08);
       border-radius: 6px;
       overflow: hidden;
@@ -42,6 +42,13 @@
 <body>
   <div class="form-wrapper">
     <div class="form-container">
+      <header style="display:flex; align-items:center; gap:16px; padding:24px 32px; border-bottom:1px solid rgba(0,0,0,0.06); background:transparent;">
+        <img src="logo.png" alt="Logo" style="height:48px; width:auto; display:block;">
+        <div>
+          <h1 style="margin:0; font-size:1.25rem;">Playlist Submission / 歌单提交</h1>
+          <p style="margin:8px 0 0; color:#666;">Submit your playlist here — 在此提交你的歌单</p>
+        </div>
+      </header>
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd9_RHuWshzYC8JdT1V91lLHR9QtUog92TrqdRQOOO1yDs0qA/viewform?embedded=true" marginheight="0" marginwidth="0" frameborder="0">Loading…</iframe>
     </div>
   </div>
